# fyymbapi

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
src/: main.rs  webserver.rs  websrv.rs  yandex_api.rs  yapi.rs
