[package]
name = "fyymbapi"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls"] }
anyhow = { version = "1.0.95", features = ["std", "backtrace"] }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[profile.release]
lto = true
opt-level = 3